<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:backgroundTint="#091037"
        tools:context="@string/question_counter">

        <TextView
            android:id="@+id/questionTextView"
            style="@style/textStyle"
            android:text="@string/question_counter"
            android:textColor="#7E57C2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.09"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.143" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="370dp"
            android:layout_height="212dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="32dp"
            android:backgroundTint="#0F1747"
            app:cardCornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/questionTextView">

            <TextView
                android:id="@+id/questionRenderTextView"
                style="@style/textStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/questionRender"
                android:textColor="#FBFBFB"
                android:textColorHint="#E91E63"
                android:textSize="20sp" />
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/trueButton"
            style="@style/buttonStyle"
            android:text="@string/true_button"
            android:textColor="#009688"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.523"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView" />

        <Button
            android:id="@+id/falseButton"
            style="@style/buttonStyle"
            android:layout_width="349dp"
            android:layout_height="60dp"
            android:layout_marginStart="169dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="171dp"
            android:text="@string/false_button"
            android:textColor="#009688"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.517"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/trueButton" />

        <Button
            android:id="@+id/nextButton"
            style="@style/buttonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="188dp"
            android:layout_marginEnd="152dp"
            android:text="@string/next_button"
            android:textColor="#009688"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView" />

        <TextView
            android:id="@+id/scoreTextView"
            style="@style/textStyle"
            android:layout_width="120dp"
            android:layout_height="59dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="28dp"
            android:background="#BDA4A4"
            android:backgroundTint="#060B29"
            android:gravity="center"
            android:shadowColor="#F44336"
            android:text="@string/score"
            android:textColor="#006064"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/scoreText"
            style="@style/textStyle"
            android:layout_width="101dp"
            android:layout_height="60dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:text="@string/score_"
            android:textColor="#009688"
            app:layout_constraintEnd_toStartOf="@+id/scoreTextView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/highestScoreTextView"
            android:layout_width="76dp"
            android:layout_height="41dp"
            android:layout_marginTop="29dp"
            android:layout_marginEnd="47dp"
            android:text="TextView"
            android:textColor="#FFFCFC"
            android:textColorHint="#FBFBFB"
            app:layout_constraintEnd_toStartOf="@+id/scoreText"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>